# replited

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  clippy.toml  config.md  rust-toolchain.toml
.github/actions/setup/: action.yml
.github/services/ftp/: action.yml
.github/services/s3/minio/: action.yml
.github/workflows/: fs_integration_test.yml  ftp_integration_test.yml  s3_integration_test.yml  unit_test.yml
etc/: sample.toml
fixtures/ftp/: docker-compose-vsftpd.yml
src/: main.rs
src/base/: compress.rs  consts.rs  file.rs  generation.rs  mod.rs  numerical.rs  singleton_instance.rs  string.rs  temp_file.rs
src/cmd/: command.rs  mod.rs  replicate.rs  restore.rs
src/config/: arg.rs  args.rs  config.rs  mod.rs  storage_params.rs
src/database/: database.rs  mod.rs
src/error/: backtrace.rs  error.rs  error_code.rs  error_into.rs  mod.rs
src/log/: log.rs  mod.rs
src/restore/: mod.rs  restore_client.rs
src/runtime/: global_runtime.rs  mod.rs  runtime.rs  thread.rs
src/sqlite/: common.rs  mod.rs  wal.rs  wal_frame.rs  wal_header.rs
src/storage/: mod.rs  operator.rs  storage_client.rs
src/sync/: mod.rs  replicate.rs  restore.rs  shadow_wal_reader.rs  sync.rs  sync_client.rs
src/sync/fs/: fs_sync_client.rs  mod.rs
tests/: integration_test.py
tests/config/: fs_template.toml  ftp_template.toml  s3_template.toml
webui/: package.json
webui/src/layouts/: leftMenu.layout.vue  mixMenu.layout.vue  topMenu.layout.vue
webui/src/layouts/components/: index.ts
webui/src/router/: routes.static.ts
webui/src/views/dashboard/workbench/: index.vue
webui/src/views/login/: index.vue
webui/src/views/login/components/Login/: index.vue
