[package]
name = "litesync"
version = "0.1.0"
edition = "2021"
description = ""

[dependencies]
anyhow = { version = "1.0.65" }
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.2", features = ["derive"] }
opendal = { version = "0.47.0", features = [
  "layers-minitrace",
  "layers-async-backtrace",
  "services-s3",
] }
log = "0.4.17"
log4rs = "1.2.0"
num_cpus = "1.13.1"
once_cell = "1.15.0"
paste = "1.0.9"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0.164", features = ["derive", "rc"] }
state = "0.5"
thiserror = { version = "1" }
toml = "0.8.14"
tokio = { version = "1.35.0", features = ["full"] }

[[bin]]
name = "litesync"
path = "src/main.rs"
doctest = false
test = false
