[package]
name = "replited"
version = "0.1.0"
edition = "2021"
description = ""

[dependencies]
anyhow = { version = "1.0.65" }
async-trait = { version = "0.1.81" }
backtrace = "0.3.73"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.2", features = ["derive"] }
opendal = { version = "0.50.0", features = [
  "layers-fastrace",
  "layers-async-backtrace",
  "services-s3",
  "services-fs",
] }
log = "0.4.17"
log4rs = "1.2.0"
lz4 = "1.26.0"
parking_lot = "0.12.1"
paste = "1.0.9"
regex = { version = "1.10.6" }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "http2",
  "rustls-tls",
  "rustls-tls-native-roots",
] }
reqwest-hickory-resolver = "0.1"
rusqlite = { version = "0.32.1" }
serde = { version = "1.0.164", features = ["derive", "rc"] }
tempfile = "3.13.0"
thiserror = { version = "1" }
toml = "0.8.14"
tokio = { version = "1.35.0", features = ["full"] }
uuid = { version = "1.10.0", features = ["v7"] }

[[bin]]
name = "replited"
path = "src/main.rs"
doctest = false
test = true
